examples/test/testpolicy1862.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1862
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key45: value20
      key28: value18
      key46: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value26
      podSelector:
        matchLabels:
          key30: value29
          key46: value28
          key16: value27
